--- a/src/main/resources/assets/soul_cages/lang/en_us.json
+++ b/src/main/resources/assets/soul_cages/lang/en_us.json
@@ -58,6 +58,7 @@
   "item.soul_cages.slime_fragment": "Slime Fragment",
   "item.soul_cages.sniffer_fragment": "Sniffer Fragment",
   "item.soul_cages.snow_golem_fragment": "Snow Golem Fragment",
+  "item.soul_cages.spider_fragment": "Spider Fragment",
   "item.soul_cages.squid_fragment": "Squid Fragment",
   "item.soul_cages.stray_fragment": "Stray Fragment",
   "item.soul_cages.strider_fragment": "Strider Fragment",
